--- a/NWA/Base/Storyboards/Main.storyboard
+++ b/NWA/Base/Storyboards/Main.storyboard
@@ -63,50 +63,35 @@
                                         <rect key="frame" x="0.0" y="92" width="375" height="127"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9O4-bH-s4J" id="sbu-bG-wfK">
-                                            <frame key="frameInset" width="375" height="126"/>
+                                            <frame key="frameInset" width="375" height="127"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="pF9-5Z-OIA">
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="97" id="CZA-Qd-Pa7"/>
-                                                        <constraint firstAttribute="width" constant="102" id="HQC-TZ-wzF"/>
-                                                    </constraints>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V2N-2t-H2l">
+                                                    <frame key="frameInset" minX="18" minY="12" width="110" height="103"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Th-Ma-lja">
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="227" id="FP3-zB-EaB"/>
-                                                        <constraint firstAttribute="height" constant="21" id="dGe-Sc-Lm4"/>
-                                                    </constraints>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcn-mM-vRn">
+                                                    <frame key="frameInset" minX="136" minY="30" width="222" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="House" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RCO-4v-enu">
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="21" id="nrg-Nr-nuy"/>
-                                                        <constraint firstAttribute="width" constant="227" id="qdz-g9-fVQ"/>
-                                                    </constraints>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="House" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ctl-1x-2CF">
+                                                    <frame key="frameInset" minX="136" minY="62" width="222" height="31"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
-                                            <constraints>
-                                                <constraint firstItem="4Th-Ma-lja" firstAttribute="top" secondItem="sbu-bG-wfK" secondAttribute="topMargin" constant="26" id="2MJ-XM-Da3"/>
-                                                <constraint firstItem="pF9-5Z-OIA" firstAttribute="leading" secondItem="sbu-bG-wfK" secondAttribute="leadingMargin" constant="6" id="SUi-q2-du9"/>
-                                                <constraint firstItem="4Th-Ma-lja" firstAttribute="leading" secondItem="pF9-5Z-OIA" secondAttribute="trailing" constant="14" id="gIY-M9-Eiu"/>
-                                                <constraint firstItem="RCO-4v-enu" firstAttribute="top" secondItem="4Th-Ma-lja" secondAttribute="bottom" constant="14" id="iDF-Ez-SIK"/>
-                                                <constraint firstItem="RCO-4v-enu" firstAttribute="leading" secondItem="pF9-5Z-OIA" secondAttribute="trailing" constant="14" id="m80-Rt-cGy"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="RCO-4v-enu" secondAttribute="bottom" constant="28" id="rON-tI-PxD"/>
-                                                <constraint firstItem="pF9-5Z-OIA" firstAttribute="top" secondItem="sbu-bG-wfK" secondAttribute="topMargin" constant="7" id="xt4-pD-HzN"/>
-                                            </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <connections>
-                                            <outlet property="houseLabel" destination="RCO-4v-enu" id="I54-Tl-tjn"/>
-                                            <outlet property="nameLabel" destination="4Th-Ma-lja" id="H5E-ae-UFh"/>
-                                            <outlet property="profileImg" destination="pF9-5Z-OIA" id="PcR-7V-42S"/>
+                                            <outlet property="houseLabel" destination="ctl-1x-2CF" id="gfd-FN-JIM"/>
+                                            <outlet property="nameLabel" destination="kcn-mM-vRn" id="BYo-1v-IzI"/>
+                                            <outlet property="profileImg" destination="V2N-2t-H2l" id="z5G-Bh-Rfv"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
